--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <h3>3. Data Handling</h3>
 
-  <p>All photos and documents captured or selected using the camera and photo access permissions are stored locally on your device.</p>
+  <p>All photos and documents captured or selected using the camera and photo access permissions are stored on your device and strictly for personal use.</p>
 
   <h3>4. Security Measures</h3>
 
