--- a/index.html
+++ b/index.html
@@ -10,35 +10,24 @@
 <body>
   <h1>MOE - Privacy Policy</h1>
 
-  <h2>Camera and Photos Permission</h2>
+  <h2>Camera, Photos, and File Permission</h2>
 
-  <p>MOE application may request access to the camera and photo storage on your device. This section outlines how and why these permissions are used:</p>
+  <p>MOE application may request access to the camera and photo storage on your device. We prioritize the privacy and security of our users. This policy outlines the purpose of utilizing the camera and file-picker features within the app for personal use. We are committed to ensuring that your data remains private and is not shared with any third parties.</p>
+  <p>   This section outlines how and why these permissions are used:</p>
 
   <h3>1. Purpose of Camera and Photos Access</h3>
 
-  <p>MOE application requires access to the camera and photo storage to allow users to upload personal files, including images and documents, within the app. This feature enables you to capture photos or select existing files from your device for various purposes, such as attaching images to notes or uploading documents for collaboration.</p>
+  <p>MOE application requires access to the camera and photo storage to allow users to upload personal files, including images and documents, within the app. This feature enables you to capture photos or select existing files from your device for various purposes, such as for personal use, and convenient way to manage personal files.</p>
 
   <h3>2. User Consent</h3>
 
   <p>Before accessing the camera or photo storage, MOE App will explicitly request your consent. You will be prompted to grant permission during the installation process or when attempting to use features that require these permissions.</p>
 
-  <h3>3. Data Handling</h3>
-
-  <p>All photos and documents captured or selected using the camera and photo access permissions are stored on your device and strictly for personal use.</p>
-
-  <h3>4. Security Measures</h3>
-
-  <p>App takes measures to ensure the security and privacy of files accessed through the camera and photo permissions. These files are stored with encryption on your device, and access is limited to the functionalities provided by the app.</p>
-
-  <h3>5. Revoking Permissions</h3>
+  <h3>3. Revoking Permissions</h3>
 
   <p>You have the right to revoke camera and photo access permissions at any time. This can typically be done through your device's settings. However, please note that revoking these permissions may limit certain features within the app that rely on accessing the camera or photo storage.</p>
 
-  <h3>6. Changes to This Policy</h3>
-
-  <p>Any changes to the camera and photos access policy will be reflected in the app's updated privacy policy. Users will be notified of any changes, and continued use of the app after such modifications constitutes acceptance of the updated policy.</p>
-
-  <!-- Add more sections as needed -->
+  <!-- Add more sections as needed --> 
 
   <h2>Contact Us</h2>
   <p>If you have any questions or concerns about this privacy policy or the MOE Application, please contact us at:</p>
